frontend/kubernetes-manifests/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  hostnames:
  - example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-http
    namespace: infra-resources
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: frontend
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
